[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bobatea"
dynamic = ["version"]
authors = [{ name="Fernando Woitschach", email="ferwoitschach@proton.me" }]
description = "Go's BubbleTea Python port."
readme = "docs/readme.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]

[tool.hatch.build]
ignore-vcs = true

[tool.hatch.version]
path = "module/build/__init__.py"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.pyvenv",
  "/.git",
  "**/__pycache__",
]

[tool.hatch.build.targets.wheel]
packages = ["module/build"]

[tool.hatch.build.targets.wheel.sources]
"module/build" = "tea"
